Fix header to allow wrapping

--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ header {
     background-color: #1f2937;
     color: #F9FAF8;
     display: flex;
-    height: 55px;
+    flex-wrap: wrap;
+    min-height: 90px;
     padding: 0 100px;
     align-items: center;
-    /* gap: 100px; */
     justify-content: space-between;
 }
 
